Fix: Overflow hints behaviour (#2304) (#2305)
* Fix: overflow-x hints behaviour (#2304)

Closes #2304
- Now the hints host get the height and the width of the visible
user's viewport (instead of the only height before that)
- Width and height are now taken without considering the scrollbar
and without floating point values.

Isues: #2304, #2294

* Test: add 'Overflow-Y' example (#2294)

--- a/src/content_scripts/content.css
+++ b/src/content_scripts/content.css
@@ -3,8 +3,10 @@ div.surfingkeys_hints_host {
     opacity: 1;
     color-scheme: auto;
     position: absolute;
-    inset: 0 0 auto 0;
-    overflow: visible;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    pointer-events: none;
 }
 div.surfingkeys_match_mark {
     background-color: #ff0;
